Cambios Ev. 3
- Se aplican los cambios pertinentes en base al checklist y a las consideraciones para la evaluacion 3 (KERI TO)